Add CORS config for Vercel and update frontend deployment config